package UD6;
public abstract class MetodoPago {
    abstract void procesarPago(double importe);
}